# htm.core

./: .gitignore  .travis.yml  API_CHANGELOG.md  API_DIFFERENCES.md  CHANGELOG.md  CMakeLists.txt  CommonCompilerConfig.cmake  Dockerfile  Dockerfile-pypi  README.md  RELEASE.md  columns_remake.py  environment.yml  grid_cell_demo.py  requirements.txt  setup.py  startupMSVC.bat
.github/workflows/: arm.yml  build.yml  pr.yml  release.yml
TestOutputDir/: VectorFileTest.stream
bindings/cs/cs_src/: CMakeLists.txt
bindings/cs/cs_src/bindings/: AssemblyInfo.cpp  CMakeLists.txt  cs_Engine.cpp  cs_Engine.hpp  cs_Tools.h  cs_Types.cpp  cs_Types.hpp  cs_Utils.cpp  cs_Utils.hpp
bindings/cs/tests/: CMakeLists.txt  NupicCoreTest.cs
bindings/py/cpp_src/: CMakeLists.txt
bindings/py/cpp_src/plugin/: PyBindRegion.cpp  PyBindRegion.hpp
bindings/py/packaging/: dummy.c  requirements.txt  setup.py
bindings/py/tests/: sparse_link_test.py
bindings/py/tests/algorithms/: column_pooler_test.py  connections_test.py  sdr_classifier_test.py  spatial_pooler_test.py  temporal_memory_test.py
bindings/py/tests/encoders/: coordinate_encoder_test.py  date_encoder_test.py  rdse_test.py  scalar_encoder_test.py  simhash_document_encoder_test.py
bindings/py/tests/regions/: network_test.py
bindings/py/tests/sdr/: Metrics_test.py  SDR_test.py
docs/: Doxyfile  Doxyfile.linux  Doxyfile.windows  Doxyfile_common  Doxyfile_include_for_linux  Doxyfile_include_for_windows  NetworkAPI Classes.md  NetworkAPI.md  NetworkAPI_Creating_Regions.md  NetworkAPI_Engine.md  NetworkAPI_Links.md  NetworkAPI_REST.md  NetworkAPI_Regions.md  README.md  doxypypy.py  generate_docs_for_linux  generate_docs_for_windows.bat  py_filter.bat
py/htm/: __init__.py
py/htm/advanced/: README.md  requirements.txt
py/htm/advanced/algorithms/: apical_tiebreak_temporal_memory.py  location_modules.py
py/htm/advanced/regions/: ApicalTMPairRegion.py  ApicalTMSequenceRegion.py  ColumnPoolerRegion.py  GridCellLocationRegion.py  __init__.py
py/htm/algorithms/: __init__.py  anomaly_likelihood.py
py/htm/encoders/: BaseEncoder.py  coordinate.py  eye.py  grid_cell_encoder.py
py/htm/examples/: hotgym.py  mnist.py
py/htm/examples/a_theory_of_how_columns_in_the_neocortex_enable_learning_the_structure_of_the_world/: capacity_test.py  capacity_test_extra.py  convergence_activity.py  ideal_classifier_experiment.py  multi_column_convergence.py  noise_convergence.py
py/htm/examples/columns_paper/: README.md  capacity_test.py  convergence_activity.py  generate_figure.py  ideal_classifier_experiment.py  multi_column_convergence.py  noise_convergence.py  topology_experiments.py
py/htm/layers/: combined_sequence_experiment2.py  continuous_location_object_machine.py  l2456_model.py  l2456_network_creation.py  l2_l4_inference.py  l2_l4_network_creation.py  laminar_network.py  multi_column_convergence_experiment.py  sequence_object_machine.py  simple_object_machine.py
py/tests/algorithms/: anomaly_likelihood_jeff_test.py
py/tests/encoders/: eye_test.py
py/tests/networkapi/: dimensions_test.py  getParameters_test.py  run_test.py  sinewave_test.py
py/tests/rest/: htm_rest_api_test.py
src/: CMakeLists.txt
src/examples/: ascii.cpp
src/examples/hello/: Hello.cpp  HelloSPTP.cpp  HelloSPTP.hpp  hello.cpp
src/examples/hotgym/: HelloSPTP.cpp  HelloSPTP.hpp
src/examples/mnist/: MNIST_SP.cpp  MNIST_SP_parallel.cpp
src/examples/mnist_nni/: config.yml  mnist.py  search_space.json
src/examples/napi_hello/: DebugBuild.sh  README.md  ReleaseBuild.sh  napi_hello.cpp  napi_hello.hpp  napi_hello_database.cpp
src/examples/rest/: README.md  client.cpp  server.cpp  server_core.hpp
src/htm/algorithms/: ColumnPooler.cpp  Connections.cpp  Connections.hpp  OverlapClassifier.cpp  OverlapClassifier.hpp  SDRClassifier.cpp  SDRClassifier.hpp  SpatialPooler.cpp  SpatialPooler.hpp  TemporalMemory.cpp  TemporalMemory.hpp
src/htm/encoders/: CoordinateEncoder.cpp  CoordinateEncoder.hpp  DateEncoder.cpp  GenericEncoder.hpp  RandomDistributedScalarEncoder.cpp  RandomDistributedScalarEncoder.hpp  ScalarEncoder.cpp  ScalarEncoder.hpp
src/htm/engine/: Input.cpp  Input.hpp  Link.cpp  Link.hpp  Network.cpp  Network.hpp  Output.cpp  Output.hpp  RESTapi.cpp  RESTapi.hpp  RawInput.hpp  Region.cpp  Region.hpp  RegionImpl.cpp  RegionImpl.hpp  RegionImplFactory.cpp  RegionImplFactory.hpp  RegisteredEncoder.hpp  RegisteredEncoderCpp.hpp  RegisteredRegionImplCpp.hpp  Spec.cpp  Watcher.cpp  YAMLUtils.cpp  YAMLUtils.hpp
src/htm/ntypes/: Array.hpp  ArrayBase.cpp  ArrayBase.hpp  BasicType.cpp  BasicType.hpp  Dimensions.hpp  Scalar.cpp  Scalar.hpp  Value.cpp  Value.hpp
src/htm/os/: ImportFilesystem.hpp  Path.cpp  Path.hpp  Timer.cpp  Timer.hpp
src/htm/regions/: ClassifierRegion.cpp  ClassifierRegion.hpp  DatabaseOutRegion.cpp  DatabaseOutRegion.hpp  DatabaseRegion.cpp  DatabaseRegion.hpp  DateEncoderRegion.cpp  DateEncoderRegion.hpp  EncoderRegion.cpp  EncoderRegion.hpp  FileInputRegion.cpp  FileInputRegion.hpp  FileOutputRegion.cpp  FileOutputRegion.hpp  InputRegion.cpp  InputRegion.hpp  RDSEEncoderRegion.cpp  RDSEEncoderRegion.hpp  SPRegion.cpp  SPRegion.hpp  ScalarEncoderRegion.cpp  ScalarEncoderRegion.hpp  ScalarSensor.cpp  TMRegion.cpp  TMRegion.hpp  TestNode.cpp  TestNode.hpp  VectorFile.cpp  VectorFile.hpp
src/htm/types/: Parallelizable.hpp  Sdr.cpp  Sdr.hpp  Serializable.hpp  Types.hpp
src/htm/utils/: Random.cpp  Random.hpp  Topology.cpp  Topology.hpp
src/nupic/algorithms/: ColumnPooler.cpp  Connections.cpp  Connections.hpp  SpatialPooler.cpp  SpatialPooler.hpp  SpatialPoolerExtended.cpp  SpatialPoolerExtended.hpp  TemporalMemory.cpp  TemporalMemory.hpp
src/nupic/encoders/: CoordinateEncoder.cpp  CoordinateEncoder.hpp
src/nupic/math/: Topology.hpp
src/nupic/ntypes/: Array.hpp  ArrayBase.cpp  ArrayBase.hpp
src/nupic/regions/: BacktrackingTMRegion.cpp  SPRegion.cpp  TMRegion.cpp
src/nupic/types/: BasicType.cpp  Sdr.cpp  Sdr.hpp  SdrProxy.hpp  Serializable.hpp
src/nupic/utils/: SdrMetrics.hpp  VectorHelpers.hpp
src/test/: CMakeLists.txt
(+86 files in other folders)
